switch to https

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     const script = document.createElement('script');
                     script.async = true;
                     script.defer = true;
-                    script.src = `http://maps.google.com/maps/api/js?callback=onGoogleMapsIframeAPIReady`;
+                    script.src = `https://maps.google.com/maps/api/js?callback=onGoogleMapsIframeAPIReady`;
                     const s = document.getElementsByTagName('script')[0];
                     s.parentNode.insertBefore(script, s);
                 }
