--- a/index.html
+++ b/index.html
@@ -410,7 +410,11 @@ map.render();</code></pre>
 
         <div class="mb-5">
             <h2>Polylines/Polygons</h2>
-            <p></p>
+            <p>
+                See options for these here: <br>
+                <a href="https://developers.google.com/maps/documentation/javascript/reference/polygon#PolylineOptions">https://developers.google.com/maps/documentation/javascript/reference/polygon#PolylineOptions</a>
+                <a href="https://developers.google.com/maps/documentation/javascript/reference/polygon#PolygonOptions">https://developers.google.com/maps/documentation/javascript/reference/polygon#PolygonOptions</a>
+            </p>
 
             <div data-live-highlight-target="example4"></div>
             <div class="map" id="map4"></div>
