--- a/index.html
+++ b/index.html
@@ -421,26 +421,6 @@ map.render();</code></pre>
 
             <script data-live-highlight="example4">
 
-                const polylines = [
-                    {
-                        path: [{lat: 51.4782, lng:-0.09677}, {lat: 51.4682, lng:-0.09677}, {lat: 51.4586,lng: -0.09835}],
-                        strokeColor: '#131540',
-                        strokeOpacity: 0.6,
-                        strokeWeight: 6
-                    }
-                ];
-
-                const polygons = [
-                    {
-                        paths: [{lat: 51.458, lng:-0.08677}, {lat: 51.45703, lng:-0.1087},  {lat:51.45282, lng:-0.0922}, {lat: 51.45324, lng:-0.0918},  {lat:51.45343, lng:-0.0903 }, {lat: 51.456, lng:-0.08767}, {lat: 51.458, lng:-0.08677}],
-                        strokeColor: '#0033ff',
-                        strokeOpacity: 0.3,
-                        strokeWeight: 4,
-                        fillColor: '#0033ff',
-                        fillOpacity: 0.1,
-                    }
-                ];
-
                 const map4 = new GoogleMaps.GoogleMap(
                     document.getElementById('map4'),
                     {
@@ -463,9 +443,28 @@ map.render();</code></pre>
                     }
                 );
 
-                map4.setMarkers(markers2);
-                map4.setPolylines(polylines);
-                map4.setPolygons(polygons);
+                map4.setPolylines([
+                    {
+                        path: [{lat: 51.4782, lng:-0.09677}, {lat: 51.4682, lng:-0.09677}, {lat: 51.4586,lng: -0.09835}],
+                        strokeColor: '#131540',
+                        strokeOpacity: 0.6,
+                        strokeWeight: 6
+                    }
+                ]);
+                map4.setPolygons([
+                    {
+                        paths: [{lat: 51.458, lng:-0.08677}, {lat: 51.45703, lng:-0.1087},  {lat:51.45282, lng:-0.0922}, {lat: 51.45324, lng:-0.0918},  {lat:51.45343, lng:-0.0903 }, {lat: 51.456, lng:-0.08767}, {lat: 51.458, lng:-0.08677}],
+                        strokeColor: '#0033ff',
+                        strokeOpacity: 0.3,
+                        strokeWeight: 4,
+                        fillColor: '#0033ff',
+                        fillOpacity: 0.1,
+                    }
+                ]);
+                map4.setCircles([{
+                    center: {lat: 51.4782, lng:-0.09677},
+                    radius: 1000
+                }]);
                 map4.render();
             </script>
         </div>
